[Win][Clang][JSC] JIT::is64BitType reports "warning: explicit specialization cannot have a storage class" https://bugs.webkit.org/show_bug.cgi?id=191146

Reviewed by Yusuke Suzuki.

* jit/JIT.h: Changed is64BitType from a template class method to a
template inner class.

Canonical link: https://commits.webkit.org/206051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237793 268f45cc-cd09-0410-ab3c-d52691b4dbfc